[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plane-py"
version = "1.1.0"
description = "An async Python client for the Plane API"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.8.0"
]
authors = [
    {name = "Andrew Petty", email = "andrewtpetty03@gmail.com"}
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["plane_py"]

[project.urls]
Homepage = "https://github.com/vangauthic/plane-py/"